--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hodor Translator</title>
-    <link href="hodor.css" rel="stylesheet">
+    <title>Brooklyn Translator</title>
+    <link href="brooklyn.css" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <h1 class="hd">Hodor Translator</h1>
+        <h1 class="hd">Brooklyn Translator </h1>
     </nav>
     <div id="container">
         <textarea id="txt-input"
-            placeholder="put your sentance in english here and we will convert it to hodor language "></textarea>
-        <button id="btn-translate">Translate To Hodor</button>
+            placeholder="put your sentance in english here and we will convert it to Brooklyn language "></textarea>
+        <button id="btn-translate">Translate To Brooklyn</button>
         <div class="text">output will be here 👇</div>
         <div id="output"></div>
-        <script src="hodor.js" type="text/javascript"></script>
+        <script src="brooklyn.js" type="text/javascript"></script>
     </div>
 
     <div class="footer">
         <h2>About</h2>
-        <p>Are you a fan of hodor? Did you know that the gibberish they say is an actual language. Use the translator
-            to convert your text from English to Hodor or Hodor language.</p>
+        <p>Are you a fan of Brooklyn? Did you know that the gibberish they say is an actual language. Use the translator
+            to convert your text from English to brooklyn or brooklyn language.</p>
     </div>
 </body>
 
