--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brooklyn Translator</title>
-    <link href="brooklyn.css" rel="stylesheet">
+    <title>Ferb-Latin Translator</title>
+    <link href="ferb.css" rel="stylesheet">
 </head>
+
 <body>
     <nav>
-        <h1 class="hd">Brooklyn Translator </h1>
+        <h1 class="hd">Ferb-Latin Translator </h1>
     </nav>
     <div id="container">
         <textarea id="txt-input"
-            placeholder="put your sentance in english here and we will convert it to Brooklyn language "></textarea>
-        <button id="btn-translate">Translate To Brooklyn</button>
+            placeholder="put your sentance in english here and we will convert it to Ferb-latin language "></textarea>
+        <button id="btn-translate">Translate To Ferb-latin </button>
         <div class="text">output will be here 👇</div>
         <div id="output"></div>
-        <script src="brooklyn.js" type="text/javascript"></script>
+        <script src="ferb.js" type="text/javascript"></script>
     </div>
 
     <div class="footer">
         <h2>About</h2>
-        <p>Are you a fan of Brooklyn? Did you know that the gibberish they say is an actual language. Use the translator
-            to convert your text from English to brooklyn or brooklyn language.</p>
+        <p>Are you a fan of Ferb Language? Did you know that the gibberish they say is an actual language. Use the
+            translator
+            to convert your text from English to Ferb-latin or ferb-latin language.</p>
     </div>
 </body>
 
